tests/baselines/reference/ClassDeclaration24.errors.txt
==== tests/cases/compiler/ClassDeclaration24.ts (1 errors) ====
    class any {
          ~~~
!!! ClassDeclaration24.ts(1,7): error TS2241: Class name cannot be 'any'.
    }